@@ -7,7 +7,11 @@ Changelog
 - Fixed support for opening gzipped FITS files by filename in a writeable mode
   (PyFITS has supported writing to gzip files for some time now, but only
   enabled it when GzipFile objects were passed to ``pyfits.open()`` due to
-  some legacy code preventing full gzip support. (#195)
+  some legacy code preventing full gzip support. Backported from 3.1.2. (#195)
+
+- Added a more helpful error message in the case of malformatted FITS files
+  that contain non-float NULL values in an ASCII table but are missing the
+  required TNULLn keywords in the header. Backported from 3.1.2. (#197)
 
 - Fixed an (apparently long-standing) issue where writing compressed images did
   not correctly write the TFORMn keywords for variable-length array columns
